[package]
name = "micro"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.4.2"
serde = "1.0"
serde_derive = "1.0.132"
logger = { git = "https://github.com/rsfreitas/logger.git" }
validator = { version = "0.14.0", features = ["derive"] }
tower-service = "0.3.1"
tower = "0.4.11"
http = "0.2.5"
tonic = { version = "0.6.2", features = ["transport"] }
futures = "0.3.19"
futures-util = "0.3.19"
prost = "0.9.0"
oneshot = "0.1.3"
tokio = { version = "1.15.0", features = ["signal"] }
mongodb = { version = "2.0.0", default-features = false, features = ["async-std-runtime"] }

